force-app/main/default/objects/Engagement_Communication_Insights__c/Engagement_Communication_Insights__c.object-meta.xml
<CustomObject>
    <label>Engagement &amp; Communication Insights</label>
    <nameField>
        <displayFormat>ECI-{0000}</displayFormat>
        <label>Engagement &amp; Communication Insights Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagement &amp; Communication Insights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>