force-app/main/default/objects/Engagement_Communication_Insights__c/fields/Chatbot_Interaction_Count__c.field-meta.xml
<CustomField>
    <fullName>Chatbot_Interaction_Count__c</fullName>
    <label>Chatbot Interaction Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>