force-app/main/default/objects/Engagement_Communication_Insights__c/fields/Communication_Bounce_Status__c.field-meta.xml
<CustomField>
    <fullName>Communication_Bounce_Status__c</fullName>
    <label>Communication Bounce Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>