force-app/main/default/objects/Engagement_Communication_Insights__c/fields/Communication_Opt_in__c.field-meta.xml
<CustomField>
    <fullName>Communication_Opt_in__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Communication Opt-in</label>
    <type>Checkbox</type>
</CustomField>