force-app/main/default/objects/Engagement_Communication_Insights__c/fields/Communication_Sensitivity_Level__c.field-meta.xml
<CustomField>
    <fullName>Communication_Sensitivity_Level__c</fullName>
    <label>Communication Sensitivity Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>