force-app/main/default/objects/Engagement_Communication_Insights__c/fields/Complaint_Query_Interaction_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Query_Interaction_Ranking__c</fullName>
    <label>Complaint / Query Interaction Ranking</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>