force-app/main/default/objects/Engagement_Communication_Insights__c/fields/Customer_Communication_Notes__c.field-meta.xml
<CustomField>
    <fullName>Customer_Communication_Notes__c</fullName>
    <label>Customer Communication Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>