force-app/main/default/objects/Engagement_Communication_Insights__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Engagement &amp; Communication Insights</relationshipLabel>
    <relationshipName>Engagement_Communication_Insights</relationshipName>
    <type>Lookup</type>
</CustomField>