force-app/main/default/objects/Engagement_Communication_Insights__c/fields/Digital_Interaction_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Digital_Interaction_Frequency__c</fullName>
    <label>Digital Interaction Frequency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>