force-app/main/default/objects/Engagement_Communication_Insights__c/fields/Email_Interaction_Status__c.field-meta.xml
<CustomField>
    <fullName>Email_Interaction_Status__c</fullName>
    <label>Email Interaction Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>