force-app/main/default/objects/Engagement_Communication_Insights__c/fields/Engagement_Tags__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Tags__c</fullName>
    <label>Engagement Tags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>