force-app/main/default/objects/Engagement_Communication_Insights__c/fields/Event_Participation__c.field-meta.xml
<CustomField>
    <fullName>Event_Participation__c</fullName>
    <label>Event Participation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>