force-app/main/default/objects/Engagement_Communication_Insights__c/fields/Follow_up_History_Count__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_History_Count__c</fullName>
    <label>Follow-up History Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>