force-app/main/default/objects/Engagement_Communication_Insights__c/fields/Inactive_Since_Days__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Since_Days__c</fullName>
    <label>Inactive Since (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>