force-app/main/default/objects/Engagement_Communication_Insights__c/fields/Lead_Engagement_Stage__c.field-meta.xml
<CustomField>
    <fullName>Lead_Engagement_Stage__c</fullName>
    <label>Lead Engagement Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>