force-app/main/default/objects/Engagement_Communication_Insights__c/fields/Preferred_Follow_Up_Mode__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Follow_Up_Mode__c</fullName>
    <label>Preferred Follow-Up Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>