force-app/main/default/objects/Engagement_Communication_Insights__c/fields/Relationship_Maturity_Score__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Maturity_Score__c</fullName>
    <label>Relationship Maturity Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>