force-app/main/default/objects/Engagement_Communication_Insights__c/fields/Response_Rate__c.field-meta.xml
<CustomField>
    <fullName>Response_Rate__c</fullName>
    <label>Response Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>