force-app/main/default/objects/Engagement_Communication_Insights__c/fields/Response_Speed_Customer__c.field-meta.xml
<CustomField>
    <fullName>Response_Speed_Customer__c</fullName>
    <label>Response Speed (Customer)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>