force-app/main/default/objects/Engagement_Communication_Insights__c/fields/SMS_Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>SMS_Delivery_Status__c</fullName>
    <label>SMS Delivery Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>