force-app/main/default/objects/Engagement_Communication_Insights__c/fields/Unsubscribe_Opt_Out_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unsubscribe_Opt_Out_Reason__c</fullName>
    <label>Unsubscribe / Opt-Out Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>