force-app/main/default/objects/Engagement_Communication_Insights__c/fields/Visit_Frequency_Store_Visits__c.field-meta.xml
<CustomField>
    <fullName>Visit_Frequency_Store_Visits__c</fullName>
    <label>Visit Frequency (Store Visits)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>