force-app/main/default/objects/Engagement_Communication_Insights__c/fields/WhatsApp_Interaction_Status__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Interaction_Status__c</fullName>
    <label>WhatsApp Interaction Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>